# starstruck

./: Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
bevy/: Cargo.toml  README.md  TODO.md
bevy/src/: asteroid.rs  main.rs  ship.rs
godot/: project.godot  space.tscn
godot/editor/: icon.svg.import  project.godot  space.tscn  starstruck.gdextension
rust/: Cargo.toml
rust/src/: lib.rs
src/: asteroid.rs  main.rs  map.rs  ship.rs  voronoi.rs
