[package]
name = "starstruck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

# https://github.com/jakobhellermann/bevy-inspector-egui/issues/163
[profile.dev.package.bevy-inspector-egui]
opt-level = 1

[dependencies]
bevy = "0.12"
bevy_egui = "0.23.0"
bevy-inspector-egui = "0.21.0"
rand = "0.8.5"
bevy_rapier3d = "0.23.0"
