[package]
name = "starstruck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12"
# bevy_egui = "0.22.0"

# Note that this should be replaced once `https://github.com/mvlabat/bevy_egui/pull/221` is merged
bevy_egui = { git = "https://github.com/raffaeleragni/bevy_egui/", branch = "bevy_0_12" }
