[package]
name = "starstruck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
[dependencies.godot]
git = "https://github.com/godot-rust/gdext"
branch = "master" # should probably pin to some commit instead
